# Spira

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: basin.hpp  config.h  source.hpp  source_impl.hpp  spira.hpp  spira_impl.hpp  spira_stream.hpp  spira_stream_impl.hpp  spira_stream_wrapper.hpp  spira_timer.hpp  stream.hpp  stream_impl.hpp  timer.hpp
include/spira/: source.hpp  spira.hpp  state.hpp  state_impl.hpp  stream.hpp  stream_impl.hpp  timer.hpp
src/: CMakeLists.txt  basin.cpp  main.cpp  spira_timer.cpp  stream.cpp  timer.cpp
tests/: CMakeLists.txt  basin.cpp  spira_benchmark.cpp  spira_test.cpp  spira_unittest.cpp  state.cpp  stream.cpp  timer.cpp
